Implement Champions Dashboard, Activities Page Revamp, and Navigation Fixes

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,8 @@
-PORT=4000
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433
 DB_USER=e4n2
 DB_PASSWORD=e4n2pass
 DB_NAME=e4n2db
+JWT_SECRET=supersecretkey123
+PORT=4001
+SUPABASE_DB_URL=postgresql://postgres:[PASSWORD]@[HOST]:[PORT]/postgres
