--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,27 @@
 {
     "rewrites": [
         {
-            "source": "/api/:path*",
-            "destination": "http://72.61.83.180/api/:path*"
+            "source": "/api/(.*)",
+            "destination": "http://72.61.83.180/api/$1"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "*"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization"
+                }
+            ]
         }
     ]
 }
