--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-    "version": 2,
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/server/api/index.js"
+            "destination": "/api/index.js"
         }
     ],
     "headers": [
