Configure correct verified pooler address (Sydney region) for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,6 @@
         }
     ],
     "env": {
-        "DATABASE_URL": "postgres://postgres:vy%2F22xUZF3%2Fn8S8@db.kaoagsuxccwgrdydxros.supabase.co:5432/postgres"
+        "DATABASE_URL": "postgres://postgres.kaoagsuxccwgrdydxros:vy%2F22xUZF3%2Fn8S8@aws-1-ap-southeast-2.pooler.supabase.com:6543/postgres?pgbouncer=true"
     }
 }
